--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"scripts": {
 		"dev": "webpack-dev-server --mode development --open",
 		"build:dev": "webpack --mode development",
-		"build:prod": "webpack --mode production"
+		"build:prod": "webpack --mode production",
+		"lint:fix": "eslint --fix src --ext .js",
+		"lint": "eslint src --ext .js"
 	},
 	"dependencies": {
 		"react": "^16.13.1",
@@ -21,7 +23,16 @@
 		"@babel/preset-react": "^7.9.4",
 		"babel-loader": "^8.1.0",
 		"css-loader": "^3.5.3",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.1.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^3.0.0",
 		"file-loader": "^6.0.0",
+		"prettier": "^2.0.5",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
