--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 		"@babel/preset-env": "^7.9.6",
 		"@babel/preset-react": "^7.9.4",
 		"babel-loader": "^8.1.0",
+		"babel-plugin-root-import": "^6.5.0",
 		"css-loader": "^3.5.3",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0",
 		"eslint-config-prettier": "^6.11.0",
+		"eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.3",
