--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
 		"lint": "eslint src --ext .js"
 	},
 	"dependencies": {
+		"immer": "^6.0.3",
 		"react": "^16.13.1",
-		"react-dom": "^16.13.1"
+		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.0",
+		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
