--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 		"lint": "eslint src --ext .js"
 	},
 	"dependencies": {
+		"history": "^4.10.1",
 		"immer": "^6.0.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.1.2",
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3"
 	},
