--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-plugin-react-hooks": "^3.0.0",
 		"file-loader": "^6.0.0",
 		"prettier": "^2.0.5",
+		"prop-types": "^15.7.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
