Create axios instances

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lint": "eslint src --ext .js"
 	},
 	"dependencies": {
+		"axios": "^0.19.2",
 		"history": "^4.10.1",
 		"immer": "^6.0.3",
 		"react": "^16.13.1",
