--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
 		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jest": "^23.8.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.3",
 		"eslint-plugin-react": "^7.19.0",
